@@ -1,5 +1,3 @@
 node.environment=test
-testing.discovery.static=true
-service-balancer.reporting.uri=https://pulse-int-ingest.lab.ppops.net
 http-server.http.enabled=true
 http-server.https.enabled=false
